src/styles/layout/_layout.base.scss
.layout--left {
  float: left;
  border: 0;
}

.layout--right {
  float: right;
}

.layout--top {
  vertical-align: top;
}

.layout--relative {
  position: relative;
}

.layout--absolute {
  position: absolute;
}

.layout--fullheight {
  height: 100vh;
  overflow-y: scroll;
}

.layout--flex {
  display: flex;
  align-items: center;
}

.list--inline {
  li {
    display: inline-block;
  }
}

ol {
  list-style-type: decimal;
  margin-left: 1.6rem;
}

.cf {
  @extend %clearfix;
}

.full-height {
  @extend %full-height;
}

.double-height {
  min-height: 200vh;
}

.flex {
  display: flex;
  align-items: center;
}

.full-image {
  width: 100%;
}

.full-bg {
  // background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-size: auto 100%;
}

.anchor {
  position: relative;
  height: 0;
  top: -6rem;
  // media queries
  @include breakpoint($mobile-xsm) {
    top: -5rem;
  }
}

.hidden {
  display: none;
}

.show {
  display: block;
}

.overlay {
  position: fixed;
  background-color: $white;
  opacity: 0.5;
  top: 0;
  height: 100%;
  width: 100%;
  z-index: 6;
}

.full-width {
  width: 100%;
  clear: both;
}

.quarter-width {
  width: 25%;
  float: left;
}

